[package]
name = "legend-of-pyoi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls" ] }
tokio = { version = "1", features = [ "full" ] }
